# MateMaTex

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MateMaTeX-Deployment-Prompt.md  README.md  app.py  nixpacks.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  render.yaml  requirements.txt
backend/app/: auth.py  cache.py  config.py  db.py  job_store.py  main.py  rate_limit.py
backend/app/collaboration/: router.py
backend/app/curriculum/: __init__.py  lk20.py  topic_coverage.py
backend/app/differentiation/: generator.py  hint_engine.py
backend/app/editor/: ai_actions.py  compiler.py
backend/app/exercises/: router.py
backend/m1/: scorer.py
backend/tests/: conftest.py  test_auth_scope.py  test_cancel_flags.py  test_content_quality.py  test_m1_report_api.py  test_math_verifier.py  test_pipeline.py  test_sharing.py
data/: .gitkeep
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: middleware.ts
output/: .gitkeep
shared/: pyproject.toml
shared/matematex_core/: __init__.py
shared/matematex_core/curriculum/: __init__.py  streamlit_extras.py
shared/matematex_core/latex/: __init__.py
src/: app_full.py  curriculum.py  storage.py  translations.py
src/agents/: math_agents.py
src/skills/: __init__.py  matte_latex_skill.py
src/tasks/: math_tasks.py
src/tools/: __init__.py  differentiation.py  difficulty_analyzer.py  pdf_generator.py  rubric_generator.py  theme_manager.py  topic_suggester.py
src/ui/: __init__.py  styles.css
(+74 files in other folders)
