[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matematex-core"
version = "2.0.0"
description = "Shared curriculum and LaTeX data for MateMaTeX (Streamlit + FastAPI)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["matematex_core*"]
